Units: Fix sizeForLabels double-scaling icons with Plasma scaling

The sizeForLabels unit internally uses roundToIconSize(), giving it a
value and feeding that into devicePixelIconSize() to take into account
required icons size differences when using Plasma scaling. But
roundToIconSize() internally does that automatically! So as a result,
the size is double-scaled and looks too big. To fix this, we simply have
to stop using devicePixelIconSize() for this unit.

BUG: 454131
FIXED-IN: 5.96